Add semantic elements to About Emma section

--- a/index.html
+++ b/index.html
@@ -208,16 +208,18 @@
             </a>
           </section>
         </section>
-        <div class="btn-light-top text-align--center font-size-2-4">
+        <span class="btn-light-top text-align--center font-size-2-4">
           <a href="pattern.html" class="btn-light">Se alle oppskrifter</a>
-        </div>
+        </span>
       </section>
 
       <!-- --------------- -->
       <!-- ABOUT EMMA SECTION -->
       <!-- --------------- -->
-      <div id="about" class="about-section flex page-section">
-        <div class="about-text-section justify-self--center align-self--center">
+      <section id="about" class="about-section flex page-section">
+        <article
+          class="about-text-section justify-self--center align-self--center"
+        >
           <h2 class="page-heading font-size-4-8">Om Emma</h2>
           <p class="page-text font-size-1-6">
             Hei, Jeg er Emma Elisabeth! <br /><br />
@@ -231,8 +233,8 @@
             strikking igjen og lært meg alt jeg kan. Takket være youtube har jeg
             blitt en erfaren strikker!
           </p>
-        </div>
-        <div class="about-text-img">
+        </article>
+        <article class="about-text-img">
           <img class="about-img" src="/Img/Instagram/2.jpg" />
           <div class="about-text-section-2">
             <p class="page-text font-size-1-6">
@@ -241,8 +243,8 @@
               alle, både nybegynnere og erfarene strikkere.
             </p>
           </div>
-        </div>
-      </div>
+        </article>
+      </section>
 
       <!-- --------------- -->
       <!-- INSTAGRAM SECTION -->
