Add semantic elements to Instagram section

--- a/index.html
+++ b/index.html
@@ -249,8 +249,8 @@
       <!-- --------------- -->
       <!-- INSTAGRAM SECTION -->
       <!-- --------------- -->
-      <div class="instagram-section margin-LF-auto">
-        <div class="instagram-box margin-LF-auto">
+      <section class="instagram-section margin-LF-auto">
+        <section class="instagram-box margin-LF-auto">
           <a
             class="instagram-link"
             target="_blank"
@@ -260,7 +260,7 @@
             </h3></a
           >
 
-          <div class="instagram-gallery grid grid--3-cols">
+          <article class="instagram-gallery grid grid--3-cols">
             <figure class="gallery-item">
               <a target="_blank" href="https://www.instagram.com/p/CkLjX-GjSKs/"
                 ><img src="img/Instagram/1.jpg"
@@ -291,9 +291,9 @@
                 ><img src="img/Instagram/8.jpg"
               /></a>
             </figure>
-          </div>
-        </div>
-      </div>
+          </article>
+        </section>
+      </section>
       <!-- -------------------- -->
       <!-- CONTACT FORM SECTION -->
       <!-- -------------------- -->
