Add semantic elements to Contact form section

--- a/index.html
+++ b/index.html
@@ -297,49 +297,41 @@
       <!-- -------------------- -->
       <!-- CONTACT FORM SECTION -->
       <!-- -------------------- -->
-      <div
+      <section
         class="page-section align-items--center flex flex-dir-column"
         id="contact"
       >
         <h1 class="page-heading font-size-6-4">Ta Kontakt</h1>
         <form method="get" class="contact-form flex flex-dir-column">
-          <div>
-            <input
-              class="input-field"
-              id="name"
-              type="text"
-              placeholder="NAVN *"
-              required
-            />
-          </div>
-
-          <div>
-            <input
-              class="input-field"
-              id="email"
-              type="email"
-              placeholder="DIN E-POST *"
-              required
-            />
-          </div>
-
-          <div>
-            <textarea
-              class="input-field message-field"
-              id="message"
-              type="text"
-              placeholder="MELDING *"
-              rows="15"
-              required
-            ></textarea>
-          </div>
+          <input
+            class="input-field"
+            id="name"
+            type="text"
+            placeholder="NAVN *"
+            required
+          />
+          <input
+            class="input-field"
+            id="email"
+            type="email"
+            placeholder="DIN E-POST *"
+            required
+          />
+          <textarea
+            class="input-field message-field"
+            id="message"
+            type="text"
+            placeholder="MELDING *"
+            rows="15"
+            required
+          ></textarea>
 
           <button value="submit" class="btn btn--contact">Send</button>
-          <div>
-            <p class="ps align-items--center">* Feltet må fylles ut</p>
-          </div>
+
+          <p class="ps align-items--center">* Feltet må fylles ut</p>
         </form>
-      </div>
+      </section>
+
       <div class="to-top-col block" id="toTop">
         <a href="#"><i class="fa-solid fa-angles-up to-top-icon"></i></a>
       </div>
