Add semantic elements to Footer section

--- a/index.html
+++ b/index.html
@@ -342,8 +342,8 @@
   <!-- FOOTER SECTION -->
   <!-- --------------- -->
   <footer class="footer">
-    <div class="grid grid--2-cols justify-items--center">
-      <div class="flex flex-dir-column">
+    <section class="grid grid--2-cols justify-items--center">
+      <article class="flex flex-dir-column">
         <ul class="social-links flex">
           <li>
             <a
@@ -381,7 +381,7 @@
           Copyright &copy; 2022 by Emma Elisabeth Knit,<br />
           Inc. All rights reserved.
         </p>
-      </div>
+      </article>
       <nav class="justify-self--center">
         <p class="footer-heading font-size-1-6">Sider</p>
         <ul class="footer-nav grid grid--2-cols">
@@ -416,6 +416,6 @@
           </li>
         </ul>
       </nav>
-    </div>
+    </section>
   </footer>
 </html>
