Add semantic elements to Pattern page

--- a/pattern.html
+++ b/pattern.html
@@ -102,29 +102,31 @@
   </header>
   <body>
     <main class="main-section margin-LF-auto">
-      <div class="page-section flex gap-6-4">
-        <div>
+      <section class="page-section flex gap-6-4">
+        <section>
           <h1 class="page-heading font-size-6-4">Oppskrifter</h1>
 
           <!-- FILTER DROP DOWN -->
-          <div class="dropDown">
+          <article class="dropDown">
             <button class="dropbtn">Velg språk ▼</button>
             <div class="dropDownContent">
               <a class="filter-item language-norsk">Norsk</a>
               <a class="filter-item language-svenska">Svenska</a>
               <a class="filter-item language-english">English</a>
             </div>
-          </div>
+          </article>
 
           <!-- --------------- -->
           <!-- PATTER SHEET SECTION -->
           <!-- --------------- -->
-          <div class="pattern-sheet">
-            <div class="pattern margin flex flex-dir-column gap-3-2">
+          <section class="pattern-sheet">
+            <section class="pattern margin flex flex-dir-column gap-3-2">
               <!-- NORWEGIAN -->
-              <div class="lang-norsk grid grid--3-cols gap-3-2 language-filter">
+              <section
+                class="lang-norsk grid grid--3-cols gap-3-2 language-filter"
+              >
                 <!-- GUROS LUE-->
-                <div class="pattern-card norsk">
+                <article class="pattern-card norsk">
                   <a
                     class="text-decoration-none"
                     href="/pattern-page/guros-lue.html"
@@ -136,19 +138,19 @@
                         alt="woman with a knitted sweater on a boat"
                       />
                     </figure>
-                    <div class="pattern-card-text-box grid grid--1-col">
+                    <section class="pattern-card-text-box grid grid--1-col">
                       <h3 class="pattern-card-heading">Guros lue</h3>
                       <p class="pattern-card-price">30.00 NOK</p>
 
                       <a class="add-cart" href="#">
                         <i class="fa-solid fa-cart-plus add-cart-icon"></i>
                       </a>
-                    </div>
+                    </section>
                   </a>
-                </div>
+                </article>
 
                 <!-- MALINS GENSER -->
-                <div class="pattern-card norsk">
+                <article class="pattern-card norsk">
                   <a
                     class="text-decoration-none"
                     href="/pattern-page/fridas-genser.html"
@@ -160,20 +162,20 @@
                         alt="woman with a knitted sweater on a boat"
                       />
                     </figure>
-                    <div class="pattern-card-text-box grid grid--1-col">
+                    <section class="pattern-card-text-box grid grid--1-col">
                       <h3 class="pattern-card-heading">Malins genser</h3>
                       <p class="pattern-card-price">60.00 NOK</p>
 
                       <a class="add-cart" href="#">
                         <i class="fa-solid fa-cart-plus add-cart-icon"></i>
                       </a>
-                    </div>
+                    </section>
                   </a>
-                </div>
+                </article>
 
                 <!-- GUROS GENSER -->
 
-                <div class="pattern-card norsk">
+                <article class="pattern-card norsk">
                   <a
                     class="text-decoration-none"
                     href="/pattern-page/guros-genser.html"
@@ -185,18 +187,18 @@
                         alt="Green knitted sweater"
                       />
                     </figure>
-                    <figure class="pattern-card-text-box grid grid--1-col">
+                    <section class="pattern-card-text-box grid grid--1-col">
                       <h3 class="pattern-card-heading">Guros genser</h3>
                       <p class="pattern-card-price">60.00 NOK</p>
                       <a class="add-cart" href="#">
                         <i class="fa-solid fa-cart-plus add-cart-icon"></i>
                       </a>
-                    </figure>
+                    </section>
                   </a>
-                </div>
+                </article>
 
                 <!-- FRIDAS GENSER -->
-                <div class="pattern-card norsk">
+                <article class="pattern-card norsk">
                   <a
                     class="text-decoration-none"
                     href="/pattern-page/fridas-genser.html"
@@ -209,18 +211,18 @@
                       />
                     </figure>
 
-                    <div class="pattern-card-text-box grid grid--1-col">
+                    <section class="pattern-card-text-box grid grid--1-col">
                       <h3 class="pattern-card-heading">Fridas genser</h3>
                       <p class="pattern-card-price">60.00 NOK</p>
                       <a class="add-cart" href="#">
                         <i class="fa-solid fa-cart-plus add-cart-icon"></i>
                       </a>
-                    </div>
+                    </section>
                   </a>
-                </div>
+                </article>
 
                 <!-- EVELINAGENSER -->
-                <div class="pattern-card norsk">
+                <article class="pattern-card norsk">
                   <a
                     class="text-decoration-none"
                     href="/pattern-page/evelinagenser.html"
@@ -233,23 +235,23 @@
                       />
                     </figure>
 
-                    <div class="pattern-card-text-box grid grid--1-col">
+                    <section class="pattern-card-text-box grid grid--1-col">
                       <h3 class="pattern-card-heading">Evelinagenser</h3>
                       <p class="pattern-card-price">60.00 NOK</p>
                       <a class="add-cart" href="#">
                         <i class="fa-solid fa-cart-plus add-cart-icon"></i>
                       </a>
-                    </div>
+                    </section>
                   </a>
-                </div>
-              </div>
+                </article>
+              </section>
               <!-- ENGLISH -->
-              <div
+              <section
                 class="lang-english grid grid--3-cols gap-3-2 language-filter"
               >
                 <!-- GUROS SWEATER -->
 
-                <div class="pattern-card english">
+                <article class="pattern-card english">
                   <a
                     class="text-decoration-none"
                     href="/pattern-page/guros-sweater.html"
@@ -261,18 +263,18 @@
                         alt="Green knitted sweater"
                       />
                     </figure>
-                    <figure class="pattern-card-text-box grid grid--1-col">
+                    <section class="pattern-card-text-box grid grid--1-col">
                       <h3 class="pattern-card-heading">Guro´s sweater</h3>
                       <p class="pattern-card-price">60.00 NOK</p>
                       <a class="add-cart" href="#">
                         <i class="fa-solid fa-cart-plus add-cart-icon"></i>
                       </a>
-                    </figure>
+                    </section>
                   </a>
-                </div>
+                </article>
 
                 <!-- Frida´s sweater -->
-                <div class="pattern-card english">
+                <article class="pattern-card english">
                   <a
                     class="text-decoration-none"
                     href="/pattern-page/fridas-sweater.html"
@@ -285,23 +287,23 @@
                       />
                     </figure>
 
-                    <div class="pattern-card-text-box grid grid--1-col">
+                    <section class="pattern-card-text-box grid grid--1-col">
                       <h3 class="pattern-card-heading">Frida´s sweater</h3>
                       <p class="pattern-card-price">60.00 NOK</p>
                       <a class="add-cart" href="#">
                         <i class="fa-solid fa-cart-plus add-cart-icon"></i>
                       </a>
-                    </div>
+                    </section>
                   </a>
-                </div>
-              </div>
+                </article>
+              </section>
 
               <!-- SWEDISH -->
-              <div
+              <section
                 class="lang-svenska grid grid--3-cols gap-3-2 language-filter"
               >
                 <!-- EVELINATRÖJAN -->
-                <div class="pattern-card svenska">
+                <article class="pattern-card svenska">
                   <a
                     class="text-decoration-none"
                     href="/pattern-page/evelinagenser-svensk.html"
@@ -314,20 +316,20 @@
                       />
                     </figure>
 
-                    <div class="pattern-card-text-box grid grid--1-col">
+                    <section class="pattern-card-text-box grid grid--1-col">
                       <h3 class="pattern-card-heading">Evelinatröjan</h3>
                       <p class="pattern-card-price">60.00 NOK</p>
                       <a class="add-cart" href="#">
                         <i class="fa-solid fa-cart-plus add-cart-icon"></i>
                       </a>
-                    </div>
+                    </section>
                   </a>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
+                </article>
+              </section>
+            </section>
+          </section>
+        </section>
+      </section>
       <div class="to-top-col" id="toTop">
         <a href="#"><i class="fa-solid fa-angles-up to-top-icon"></i></a>
       </div>
