Add semantic elements to Privacy page

--- a/privacy-page.html
+++ b/privacy-page.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -21,7 +20,7 @@
     <link rel="stylesheet" href="CSS/pattern-store.css" />
     <title>EMMA</title>
   </head>
-    <!-- --------------- -->
+  <!-- --------------- -->
   <!-- HEADER SECTION -->
   <!-- --------------- -->
   <header class="flex align-items--center">
@@ -62,48 +61,72 @@
     </nav>
   </header>
   <body>
-
     <main class="main-section margin-LF-auto">
-
       <!-- --------------- -->
       <!-- PERSONVERN OG VILKÅR SECTION -->
       <!-- --------------- -->
-<div class="page-section">
- <h1 class="page-heading font-size-6-4">Personvern og vilkår</h1>
+      <section class="page-section">
+        <h1 class="page-heading font-size-6-4">Personvern og vilkår</h1>
 
- <div class="page-text-box flex gap-6-4 flex-dir-column">
- <div class="text-box-item">
-  <h2 class="page-heading-secondary font-size-2-4">Personlige opplysninger</h2>
-  <p class="page-text font-size-1-6">EMMA selger ikke personlige opplysninger til andre. <br> De er kun registrert i nettbutikkens kundekartotek. <br> Du kan til enhver tid få slettet dine opplysninger. <br> Kontakt <a class="footer-link" href="mailto:emmaelisabethknit@gmail.com"
-    >emmaelisabethknit@gmail.com</a> for sletting. <br> <br> Når du handler, registreres følgende opplysninger om deg:</p> 
-    <ul class="ul-list">
-      <li class="list-item font-size-1-6">Navn</li>
-      <li class="list-item font-size-1-6">Adresse</li>
-      <li class="list-item font-size-1-6">Telefonnummer</li>
-      <li class="list-item font-size-1-6">E-post adresse</li>
-    </ul>
-    <p class="page-text font-size-1-6"><br>Formålet med disse opplysningene er å kunne sende deg varene dine.Personlige opplysninger registrert hos EMMA oppbevares i 5 år, før de slettes. <br>
-    IT ansvarlig hos EMMA: Emma Elisbeth Høvik Eide <br><br>
-    Det hverken oppbevares eller transmitteres kundeopplysninger kryptert.</p>
- </div>
+        <article class="page-text-box flex gap-6-4 flex-dir-column">
+          <section class="text-box-item">
+            <h2 class="page-heading-secondary font-size-2-4">
+              Personlige opplysninger
+            </h2>
+            <p class="page-text font-size-1-6">
+              EMMA selger ikke personlige opplysninger til andre. <br />
+              De er kun registrert i nettbutikkens kundekartotek. <br />
+              Du kan til enhver tid få slettet dine opplysninger. <br />
+              Kontakt
+              <a class="footer-link" href="mailto:emmaelisabethknit@gmail.com"
+                >emmaelisabethknit@gmail.com</a
+              >
+              for sletting. <br />
+              <br />
+              Når du handler, registreres følgende opplysninger om deg:
+            </p>
+            <ul class="ul-list">
+              <li class="list-item font-size-1-6">Navn</li>
+              <li class="list-item font-size-1-6">Adresse</li>
+              <li class="list-item font-size-1-6">Telefonnummer</li>
+              <li class="list-item font-size-1-6">E-post adresse</li>
+            </ul>
+            <p class="page-text font-size-1-6">
+              <br />Formålet med disse opplysningene er å kunne sende deg varene
+              dine.Personlige opplysninger registrert hos EMMA oppbevares i 5
+              år, før de slettes. <br />
+              IT ansvarlig hos EMMA: Emma Elisbeth Høvik Eide <br /><br />
+              Det hverken oppbevares eller transmitteres kundeopplysninger
+              kryptert.
+            </p>
+          </section>
 
- <div class="text-box-item">
-  <h2 class="page-heading-secondary font-size-2-4">Cookies</h2>
-  <p class="page-text font-size-1-6">www.emmaelisabethknit.com benytter seg av cookies med et formål om å optimalisere hjemmesiden og dens funksjonalitet, og dermed gjøre alle besøk så enkle som overhode mulig for både deg, og andre.</p>
- </div>
+          <section class="text-box-item">
+            <h2 class="page-heading-secondary font-size-2-4">Cookies</h2>
+            <p class="page-text font-size-1-6">
+              www.emmaelisabethknit.com benytter seg av cookies med et formål om
+              å optimalisere hjemmesiden og dens funksjonalitet, og dermed gjøre
+              alle besøk så enkle som overhode mulig for både deg, og andre.
+            </p>
+          </section>
 
- <div class="text-box-item">
-  <h2 class="page-heading-secondary font-size-2-4">Statistikk</h2>
-  <p class="page-text font-size-1-6">www.emmaelisabethknit.com benytter seg av statistikk med et formål om å optimalisere hjemmesiden, og få oversikt over antall besøkende.</p>
- </div>
-</div>
-<div class="to-top-col" id="toTop">
-  <a href="#"><i class="fa-solid fa-angles-up to-top-icon"></i></a>
-</div>
+          <section class="text-box-item">
+            <h2 class="page-heading-secondary font-size-2-4">Statistikk</h2>
+            <p class="page-text font-size-1-6">
+              www.emmaelisabethknit.com benytter seg av statistikk med et formål
+              om å optimalisere hjemmesiden, og få oversikt over antall
+              besøkende.
+            </p>
+          </section>
+        </article>
+        <div class="to-top-col" id="toTop">
+          <a href="#"><i class="fa-solid fa-angles-up to-top-icon"></i></a>
+        </div>
+      </section>
     </main>
     <script src="/JS/script.js"></script>
   </body>
- <!-- --------------- -->
+  <!-- --------------- -->
   <!-- FOOTER SECTION -->
   <!-- --------------- -->
   <footer class="footer">
