Add semantic elements to Sales condition page

--- a/sales-conditions.html
+++ b/sales-conditions.html
@@ -68,11 +68,11 @@
       <!-- --------------- -->
       <!-- SALES CONDITION SECTION -->
       <!-- --------------- -->
-      <div class="page-section">
+      <section class="page-section">
         <h1 class="page-heading font-size-6-4">Salgsbetingelser</h1>
 
-        <div class="page-text-box flex gap-6-4 flex-dir-column">
-          <div class="text-box-item">
+        <article class="page-text-box flex gap-6-4 flex-dir-column">
+          <section class="text-box-item">
             <h2 class="page-heading-secondary font-size-2-4">
               Mailopplysninger
             </h2>
@@ -81,9 +81,9 @@
               Dersom det er feil i mailadressen vil du ikke motta
               ordrebekreftelse eller oppskrift i PDF format.
             </p>
-          </div>
+          </section>
 
-          <div class="text-box-item">
+          <section class="text-box-item">
             <h2 class="page-heading-secondary font-size-2-4">
               Ordrebekreftelse
             </h2>
@@ -92,9 +92,9 @@
               etter kjøp. Ta kontakt på emmaelisabethknit@gmail.com dersom du
               ikke har mottat ordrebekreftelsen.
             </p>
-          </div>
+          </section>
 
-          <div class="text-box-item">
+          <section class="text-box-item">
             <h2 class="page-heading-secondary font-size-2-4">Betaling</h2>
             <p class="page-text font-size-1-6">
               EMMA mottar online betalinger med Visa, Mastercard eller Vipps.
@@ -103,17 +103,17 @@
               (NOK).
             </p>
             <!-- legge inn sikkerhet rudnt betaling -->
-          </div>
+          </section>
 
-          <div class="text-box-item">
+          <section class="text-box-item">
             <h2 class="page-heading-secondary font-size-2-4">Levering</h2>
             <p class="page-text font-size-1-6">
               Oppskrifter sendes som PDF-filer til din oppgitte mailadresse.
               Sørg for å fylle inn riktig.
             </p>
-          </div>
+          </section>
 
-          <div class="text-box-item">
+          <section class="text-box-item">
             <h2 class="page-heading-secondary font-size-2-4">
               Angrerett ved kjøp av oppskrifter
             </h2>
@@ -122,9 +122,9 @@
               når kjøpet gjennomføres. Kjøperen har ikke angrerett på PDF-filer
               kjøpt på hjemmeisden, da disse ikke kan returneres.
             </p>
-          </div>
-        </div>
-      </div>
+          </section>
+        </article>
+      </section>
       <div class="to-top-col" id="toTop">
         <a href="#"><i class="fa-solid fa-angles-up to-top-icon"></i></a>
       </div>
