Update Footer section Privacy page

--- a/privacy-page.html
+++ b/privacy-page.html
@@ -130,59 +130,80 @@
   <!-- FOOTER SECTION -->
   <!-- --------------- -->
   <footer class="footer">
-    <div class="footer-section">
-      <div class="logo-col">
-        <ul class="social-links">
+    <section class="grid grid--2-cols justify-items--center">
+      <article class="flex flex-dir-column">
+        <ul class="social-links flex">
           <li>
             <a
-              class="social-icon"
-              target="_blank"
-              href="https://www.instagram.com/emmaelisabethknit/"
-              ><i class="fa-brands fa-instagram"></i
-            ></a>
-          </li>
-          <li>
-            <a
-              class="social-icon"
+              class="social-icon font-size-3-6"
               target="_blank"
               href="https://www.facebook.com/Emmaelisabethknit"
               s
               ><i class="fa-brands fa-facebook"></i
             ></a>
           </li>
+          <li>
+            <a
+              class="social-icon font-size-3-6"
+              target="_blank"
+              href="https://www.ravelry.com/designers/emma-elisabeth-eide"
+              s
+              ><i class="fa-brands fa-ravelry"></i
+            ></a>
+          </li>
+          <li>
+            <a
+              class="social-icon font-size-3-6"
+              target="_blank"
+              href="https://www.instagram.com/emmaelisabethknit/"
+              ><i class="fa-brands fa-instagram"></i
+            ></a>
+          </li>
         </ul>
-        <a class="footer-link" href="mailto:emmaelisabethknit@gmail.com"
+        <a
+          class="footer-link font-size-1-6"
+          href="mailto:emmaelisabethknit@gmail.com"
           >emmaelisabethknit@gmail.com</a
         >
-        <p class="copyright">
+        <p class="copyright font-size-1-4">
           Copyright &copy; 2022 by Emma Elisabeth Knit,<br />
           Inc. All rights reserved.
         </p>
-      </div>
-      <nav class="nav-col">
-        <p class="footer-heading">Info</p>
-        <ul class="footer-nav">
-          <li><a class="footer-link" href="contact.html">Kontakt</a></li>
-          <li>
-            <a class="footer-link" href="sales-conditions.html"
+      </article>
+      <nav class="justify-self--center">
+        <p class="footer-heading font-size-1-6">Sider</p>
+        <ul class="footer-nav grid grid--2-cols">
+          <li class="footer-link--shoppingbag">
+            <a class="footer-link font-size-1-6" href="#">Handlekurv</a>
+          </li>
+          <li class="footer-link--patterns">
+            <a class="footer-link font-size-1-6" href="pattern.html"
+              >Oppskrifter</a
+            >
+          </li>
+          <li class="footer-link--sale">
+            <a class="footer-link font-size-1-6" href="sales-conditions.html"
               >Salgsbetingelser</a
             >
           </li>
-          <li>
-            <a class="footer-link" href="privacy-page.html"
+          <li class="footer-link--privacy">
+            <a class="footer-link font-size-1-6" href="privacy-page.html"
               >Personvern og vilkår</a
+            >
+          </li>
+          <li class="footer-link--about">
+            <a class="footer-link font-size-1-6" href="index.html#about"
+              >Om Emma</a
+            >
+          </li>
+
+          <li class="footer-link--contact">
+            <a class="footer-link font-size-1-6" href="index.html#contact"
+              >Kontakt</a
             >
           </li>
         </ul>
       </nav>
-      <nav class="nav-col">
-        <p class="footer-heading">Sider</p>
-        <ul class="footer-nav">
-          <li><a class="footer-link" href="pattern.html">Oppskrifter</a></li>
-          <li><a class="footer-link" href="about.html">Om Emma</a></li>
-          <li><a class="footer-link" href="#">Handlekurv</a></li>
-        </ul>
-      </nav>
-    </div>
+    </section>
   </footer>
 </html>
