Update styling Footer links

--- a/index.html
+++ b/index.html
@@ -378,19 +378,19 @@
           >emmaelisabethknit@gmail.com</a
         >
         <p class="copyright font-size-1-4">
-          Copyright &copy; 2022 by Emma Elisabeth Knit,<br />
+          Copyright &copy; 2023 by Emma Elisabeth Knit,<br />
           Inc. All rights reserved.
         </p>
       </article>
       <nav class="justify-self--center">
         <p class="footer-heading font-size-1-6">Sider</p>
-        <ul class="footer-nav grid grid--2-cols">
-          <li class="footer-link--sale">
+        <ul class="footer-nav">
+          <li class="footer-link--header">
             <a class="footer-link font-size-1-6" href="sales-conditions.html"
               >Salgsbetingelser</a
             >
           </li>
-          <li class="footer-link--privacy">
+          <li class="footer-link--header">
             <a class="footer-link font-size-1-6" href="privacy-page.html"
               >Personvern og vilkår</a
             >
