Add sticky header and shadow on scroll - All pages

--- a/pattern.html
+++ b/pattern.html
@@ -23,7 +23,7 @@
   <!-- --------------- -->
   <!-- HEADER SECTION -->
   <!-- --------------- -->
-  <header class="flex align-items--center">
+  <header class="flex align-items--center navbar" id="navbar">
     <a class="header-logo" href="index.html">
       <img
         class="logo"
@@ -100,7 +100,7 @@
       </ul>
     </nav>
   </header>
-  <body>
+  <body id="pattern">
     <main class="main-section margin-LF-auto">
       <section class="page-section flex gap-6-4">
         <section>
@@ -334,7 +334,7 @@
         <a href="#"><i class="fa-solid fa-angles-up to-top-icon"></i></a>
       </div>
     </main>
-    <script src="JS/script.js" defer></script>
+    <script src="/script.js" defer></script>
   </body>
   <!-- --------------- -->
   <!-- FOOTER SECTION -->
