--- a/sales-conditions.html
+++ b/sales-conditions.html
@@ -24,7 +24,7 @@
     <!-- --------------- -->
     <!-- HEADER SECTION -->
     <!-- --------------- -->
-    <header class="flex align-items--center">
+    <header class="flex align-items--center navbar" id="navbar">
       <a class="header-logo" href="index.html">
         <img
           class="logo"
@@ -167,7 +167,7 @@
         <a href="#"><i class="fa-solid fa-angles-up to-top-icon"></i></a>
       </div>
     </main>
-    <script src="/JS/script.js"></script>
+    <script src="/script.js"></script>
   </body>
   <!-- --------------- -->
   <!-- FOOTER SECTION -->
