--- a/privacy-page.html
+++ b/privacy-page.html
@@ -23,7 +23,7 @@
   <!-- --------------- -->
   <!-- HEADER SECTION -->
   <!-- --------------- -->
-  <header class="flex align-items--center">
+  <header class="flex align-items--center navbar" id="navbar">
     <a class="header-logo" href="index.html">
       <img
         class="logo"
@@ -164,7 +164,7 @@
         </div>
       </section>
     </main>
-    <script src="/JS/script.js"></script>
+    <script src="/script.js"></script>
   </body>
   <!-- --------------- -->
   <!-- FOOTER SECTION -->
