Update footer classes

--- a/sales-conditions.html
+++ b/sales-conditions.html
@@ -173,7 +173,7 @@
   <!-- FOOTER SECTION -->
   <!-- --------------- -->
   <footer class="footer">
-    <section class="grid grid--2-cols justify-items--center">
+    <section class="grid grid--2-cols justify-items--center footer-sec">
       <article class="flex flex-dir-column">
         <ul class="social-links flex">
           <li>
@@ -213,7 +213,7 @@
           Inc. All rights reserved.
         </p>
       </article>
-      <nav class="justify-self--center">
+      <nav class="justify-self--center nav-col">
         <p class="footer-heading font-size-1-6">Sider</p>
         <ul class="footer-nav grid grid--2-cols">
           <li class="footer-link--header">
